refactor: AccusedMemberResponse 추가 및 리팩토링