@@ -20,7 +20,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.mungta.accusation.constants.AccusationTestSample.*;
@@ -102,7 +101,8 @@ class AccusationControllerTest {
 
         result.andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(ACCUSATION_ID))
-                .andExpect(jsonPath("$.accusedMemberName").value(ACCUSED_MEMBER_NAME))
+                .andExpect(jsonPath("$.accusedMember.id").value(ACCUSED_MEMBER_ID))
+                .andExpect(jsonPath("$.accusedMember.name").value(ACCUSED_MEMBER_NAME))
                 .andExpect(jsonPath("$.partyInfo.partyId").value(PARTY_ID))
                 .andExpect(jsonPath("$.partyInfo.placeOfDeparture").value(PLACE_OF_DEPARTURE))
                 .andExpect(jsonPath("$.partyInfo.destination").value(DESTINATION))
@@ -116,8 +116,7 @@ class AccusationControllerTest {
     @Test
     void getAccusationList() throws Exception {
 
-        // doReturn(AccusationListResponse.of(List.of(accusation)))
-        doReturn(AccusationListResponse.of(Arrays.asList(accusation)))
+        doReturn(AccusationListResponse.of(List.of(accusation)))
                 .when(accusationService).getAccusationList(MEMBER_ID);
 
         ResultActions result = mockMvc.perform(
@@ -160,7 +159,8 @@ class AccusationControllerTest {
 
         result.andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(ACCUSATION_ID))
-                .andExpect(jsonPath("$.accusedMemberName").value(ACCUSED_MEMBER_NAME))
+                .andExpect(jsonPath("$.accusedMember.id").value(ACCUSED_MEMBER_ID))
+                .andExpect(jsonPath("$.accusedMember.name").value(ACCUSED_MEMBER_NAME))
                 .andExpect(jsonPath("$.partyInfo.partyId").value(PARTY_ID))
                 .andExpect(jsonPath("$.partyInfo.placeOfDeparture").value(PLACE_OF_DEPARTURE))
                 .andExpect(jsonPath("$.partyInfo.destination").value(DESTINATION))
