@@ -16,8 +16,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -89,7 +87,11 @@ class AccusationServiceTest {
 
         assertAll(
                 () -> assertThat(response.getId()).isEqualTo(ACCUSATION_ID),
-                () -> assertThat(response.getAccusedMemberName()).isEqualTo(ACCUSED_MEMBER_NAME),
+                () -> assertThat(response.getAccusedMember()).isEqualTo(
+                        AccusedMemberResponse.builder()
+                                .id(ACCUSED_MEMBER_ID)
+                                .name(ACCUSED_MEMBER_NAME)
+                                .build()),
                 () -> assertThat(response.getPartyInfo()).isEqualTo(
                         PartyInfoResponse.builder()
                                 .partyId(PARTY_ID)
@@ -130,8 +132,7 @@ class AccusationServiceTest {
     @DisplayName("[회원] 신고 내역 리스트 조회 성공.")
     @Test
     void getAccusationList() {
-        //given(accusationRepository.findByMemberId(MEMBER_ID)).willReturn(List.of(accusation));
-        given(accusationRepository.findByMemberId(MEMBER_ID)).willReturn(Arrays.asList(accusation));
+        given(accusationRepository.findByMemberId(MEMBER_ID)).willReturn(List.of(accusation));
 
         AccusationListResponse response = accusationService.getAccusationList(MEMBER_ID);
         List<AccusationInfoResponse> responseList = response.getAccusations();
@@ -155,8 +156,7 @@ class AccusationServiceTest {
     @DisplayName("[회원] 해당 memberId로 등록한 신고가 하나도 없는 경우 빈 리스트를 반환.")
     @Test
     void getAccusationList_size_zero() {
-        //given(accusationRepository.findByMemberId("2")).willReturn(List.of());
-        given(accusationRepository.findByMemberId("2")).willReturn(new ArrayList<>());
+        given(accusationRepository.findByMemberId("2")).willReturn(List.of());
 
         AccusationListResponse response = accusationService.getAccusationList("2");
 
@@ -174,7 +174,11 @@ class AccusationServiceTest {
 
         assertAll(
                 () -> assertThat(response.getId()).isEqualTo(ACCUSATION_ID),
-                () -> assertThat(response.getAccusedMemberName()).isEqualTo(ACCUSED_MEMBER_NAME),
+                () -> assertThat(response.getAccusedMember()).isEqualTo(
+                        AccusedMemberResponse.builder()
+                                .id(ACCUSED_MEMBER_ID)
+                                .name(ACCUSED_MEMBER_NAME)
+                                .build()),
                 () -> assertThat(response.getPartyInfo()).isEqualTo(
                         PartyInfoResponse.builder()
                                 .partyId(PARTY_ID)
